# parprog-2018-1

./: .gitignore  README.md
groups/1506-3/Sergeev_AP/: Сергеев - Построение выпуклой оболочки. Обход Грэхема..docx  Сергеев - Построение выпуклой оболочки.docx
groups/1506-3/Shckukina_AE/: README.md  Task9_Щукина.docx
groups/1506-3/batanina_lk/: PP_Batanina.docx  README.md
groups/1506-3/batanina_lk/1-test-version/: CMakeLists.txt  README.md  before_code.cpp  checker.cpp  checker.h  generator.cpp  linearcorection.cpp  linearcorection.h  result_checker.txt  sample_checker.cpp
groups/1506-3/batanina_lk/1-test-version/tests/: 10  10.ans  2.ans  3  3.ans  4  4.ans  5.ans  6  6.ans  7.ans  8  8.ans  9  9.ans
groups/1506-3/buntova_kv/: README.md  Отчет задание 6.docx
groups/1506-3/fedorova_op/: Fedorova_OP_PP_2sem.docx  README.md
groups/1506-3/galochkin_bv/: PP report Galochkin.docx  README.md  checker.py  config.py  generator.py  reader.py  result.txt  writer.py
groups/1506-3/galochkin_bv/2-openmp/: CMakeLists.txt  README.md  checker.py  config.py  gaussian_openmp_source.cpp  result.txt
groups/1506-3/galochkin_bv/2-openmp/test_imgs/: README.md
groups/1506-3/galochkin_bv/2-openmp/tests/: 1  1.ans  10  10.ans  100  100.ans  11  11.ans  12  12.ans  13  13.ans  14  14.ans  15  15.ans  16  16.ans  18  18.ans  19  19.ans  2  2.ans  20  20.ans  21  21.ans  22  22.ans  23  23.ans  24  24.ans  25  25.ans  26  26.ans  27  27.ans  (+144 more)
groups/1506-3/galochkin_bv/3-tbb/: CMakeLists.txt  README.md  config.py  gaussian_tbb_source.cpp  result.txt
groups/1506-3/galochkin_bv/3-tbb/tests/: 1.ans  100.ans  13.ans  15.ans  16  16.ans  18  18.ans  19.ans  20.ans  22  22.ans  23.ans  24.ans  25  25.ans  26  27  29.ans  3  3.ans  30.ans  31.ans  32  36.ans  37  38.ans  39  39.ans  40  42.ans  43.ans  44.ans  46.ans  48.ans  5.ans  50  51  51.ans  53  (+38 more)
groups/1506-3/gribov_pn/: README.md  Отчет_ПП(Грибов ПН 381506-3).docx
groups/1506-3/kulikova_sa/: README.md  Отчёт_ПП_Куликова.docx
groups/1506-3/levkin_aa/: README.md  Report.docx
groups/1506-3/lipatov_id/: README.md  compile.sh  make_tests.sh  run.sh
groups/1506-3/lvova_ad/: README.md  Отчет по лаб работе Львова OpenMP TBB.docx
groups/1506-3/mayachkin_as/: README.md  mayachkin_report.docx
groups/1506-3/okunev_bp/: Otchet_Okunev_BP.docx  README.md
groups/1506-3/panov_aa/: .gitignore  README.md  Умножение разряженных матриц в столбцовом формате.docx
groups/1506-3/sannikova_vo/: README.md  ~$чет ПП Быстрая сортировка с простым слиянием Санникова В.О. 381506-3.docx  Отчет ПП Быстрая сортировка с простым слиянием Санникова В.О. 381506-3.docx
groups/1506-3/shkenev_pa/: .gitignore  README.md
groups/1506-3/sysoyev_av/: README.md
groups/1506-3/talamanov_ae/: CMakeLists.txt  PP_Talamanov.docx  README.md
groups/1506-3/talamanov_ae/1-test-version/: CMakeLists.txt  README.md  before_code.cpp  checker.cpp  checker.py  demo_generator.cpp  generator.cpp  generator.h  logger.h  logger.hpp  result_checker.txt  shellsort.h  shellsort.hpp
groups/1506-3/talamanov_ae/1-test-version/checker/: checker.cpp  checker.py
groups/1506-3/talamanov_ae/1-test-version/generator/: demo_generator.cpp  generator.cpp  generator.hpp  generator.py
groups/1506-3/talamanov_ae/1-test-version/tests/: 3_10  3_100  3_1000  4_10  4_100  4_1000  5_10  5_100  5_1000
groups/1506-3/tarakanov_ks/: CannonAlgorithm.docx  README.md
groups/1506-3/tolokontseva_nv/: README.md  Отчет_Radix_Sort_of_Double.docx
groups/1508/3-tbb/: tbb_solver.cpp
groups/1508/bakalin_ae/: README.md  (+1 more)
groups/1508/dmitrichev_na/1-test-version/HoaraSort/src/solver_/: CMakeLists.txt  README.md  before_code.cpp  sol.cpp
groups/1508/dmitrichev_na/2-openmp/ompsolver/: CMakeLists.txt  before_code.cpp  sol.cpp
(+2592 files in other folders)
